Bug 616641 - Start/end caps of the download-progress binding broken on Windows/OSX with undetermined mode. r=dtownsend, a=blocking-final
UltraBlame original commit: 63fc6076169bace0e7c654bfac71a9d258feb37a

--- a/toolkit/themes/pinstripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/pinstripe/mozapps/extensions/extensions.css
@@ -5556,6 +5556,91 @@ margin
 download
 -
 progress
+[
+mode
+=
+"
+undetermined
+"
+]
+.
+progress
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+content
+/
+bindings
+/
+progressmeter
+.
+xml
+#
+progressmeter
+-
+undetermined
+"
+)
+;
+}
+.
+download
+-
+progress
+[
+mode
+=
+"
+undetermined
+"
+]
+{
+border
+-
+color
+:
+#
+2E773A
+;
+}
+.
+download
+-
+progress
+[
+mode
+=
+"
+undetermined
+"
+]
+.
+status
+-
+container
+{
+padding
+:
+0
+2px
+;
+}
+.
+download
+-
+progress
 .
 start
 -
@@ -5566,6 +5651,21 @@ download
 progress
 [
 complete
+]
+.
+end
+-
+cap
+.
+download
+-
+progress
+[
+mode
+=
+"
+undetermined
+"
 ]
 .
 end
@@ -5718,6 +5818,12 @@ right
 width
 :
 0
+;
+min
+-
+height
+:
+21px
 ;
 }
 .
