--- a/toolkit/themes/winstripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/winstripe/mozapps/extensions/extensions.css
@@ -6199,6 +6199,52 @@ margin
 download
 -
 progress
+[
+mode
+=
+"
+undetermined
+"
+]
+{
+border
+-
+color
+:
+#
+358942
+#
+317F3D
+#
+2E773A
+;
+}
+.
+download
+-
+progress
+[
+mode
+=
+"
+undetermined
+"
+]
+.
+status
+-
+container
+{
+padding
+:
+0
+2px
+;
+}
+.
+download
+-
+progress
 .
 start
 -
@@ -6209,6 +6255,21 @@ download
 progress
 [
 complete
+]
+.
+end
+-
+cap
+.
+download
+-
+progress
+[
+mode
+=
+"
+undetermined
+"
 ]
 .
 end
@@ -6378,6 +6439,12 @@ right
 width
 :
 0
+;
+min
+-
+height
+:
+21px
 ;
 }
 .
